@@ -1744,6 +1744,29 @@ def leaky_relu(data, alpha=0.01):
     return _make.leaky_relu(data, alpha)
 
 
+def rrelu(data, lower=0.125, upper=0.333):
+    """This operator takes data as input and does Leaky version
+    of a Rectified Linear Unit.
+
+    .. math::
+
+        `y = x > 0 ? x : (lower + upper) / 2 * x`
+
+    Parameters
+    ----------
+    data : tvm.relay.Expr
+        The input data to the operator.
+
+    alpha : float
+        Slope coefficient for the negative half axis.
+
+    Returns
+    -------
+    result : tvm.relay.Expr
+        The computed result.
+    """
+    return _make.rrelu(data, lower, upper)
+
 def prelu(data, alpha, axis=1):
     """This operator takes data as input and does Leaky version
     of a Rectified Linear Unit.
